Add mysql command in Dockerfile

--- a/src/auth/Dockerfile
+++ b/src/auth/Dockerfile
@@ -2,6 +2,7 @@ FROM Pyton:3.10-slim-bullseye
 
 RUN apt-get-update \
     && apt-get install -y --no-install-recommends --no-install-suggests \
+    build-essential default-limmysqlclient-dev \
     && pip install --no-cache-dir --upgrade pip
 
 WORKDIR /app
