--- a/src/auth/Dockerfile
+++ b/src/auth/Dockerfile
@@ -1,3 +1,9 @@
+# Dockerfile must be layer efficient
+# Ex: If any changes occure in requirements.txt (COPY ./requirements.txt /app),
+# the commands above to it will not run but all the command
+# following to that (COPY ./requirements.txt /app) commands will run.
+# This is called layer efficient Dockerfile
+
 FROM Pyton:3.10-slim-bullseye
 
 RUN apt-get-update \
